--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "express": "^4.17.1",
     "flatted": "^3.2.2",
     "joi": "^17.4.2",
-    "mongoose": "^6.0.12"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
